@@ -1,3 +1,6 @@
+12/12/2009
+- fix short append/prepend attributes in {block} tags
+
 12/11/2009
 - bugfix on clear_compiled_tpl (avoid possible warning)
 
